# p11-printer

./: README.md  pyproject.toml
docs/: PROTOCOL.md
p11/: __init__.py  cli.py  imaging.py  printer.py
web/: package-lock.json  package.json
web/src/: defaults.ts  stores.ts  types.ts
web/src/components/: DebugStuff.svelte  MainPage.svelte  PrintPreview.svelte  PrinterConnector.svelte
web/src/components/basic/: BrowserWarning.svelte  FirmwareUpdater.svelte
web/src/components/designer-controls/: LabelPropsEditor.svelte
web/src/lib/p11/: client.ts  constants.ts  emitter.ts  image_encoder.ts  index.ts  print_task.ts  types.ts  utils.ts  web-bluetooth.d.ts
web/src/utils/: label_designer_object_helper.ts
