[project]
name = "p11-printer"
version = "0.1.0"
description = "P11 thermal label printer - BLE CLI and Python library"
requires-python = ">=3.10"
dependencies = [
    "bleak",
    "numpy",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["p11"]

[project.scripts]
p11 = "p11.cli:main"
